--- a/capitulo5/instalador.tex
+++ b/capitulo5/instalador.tex
@@ -64,4 +64,11 @@ Finalmente se realiza la instalación y configuración de Hadoop en el nodo maes
 Este prorotipo se realizó por completo utilizando la tecnología Shell Script en Ubuntu 18.04.
 
 \section{Alcances y trabajo a futuro}
-Se pretende que durante el desarrollo del Trabajo Terminal 2, este prorotipo se vuelva aún más robusto, es decir, que haga una mayor cantidad de validaciones, que sea capaz de continuar con el proceso de instalación aun después de este haber sido interrumpido. 
+Un instalador suele ser un sistema bastante complejo, ya que realiza instalaciones, ejecuta comandos en el shell de la computadora, verifica software que ya está instalado en la computadora, y generalmente es capaz de bajarlo o subirlo de versión, entre muchas otras cosas. Para la realización de este trabajo terminal, se pretende que durante el desarrollo del Trabajo Terminal 2, este prorotipo se vuelva más robusto de lo que es ahora, es decir:\\
+\begin{itemize}
+	\item Que haga una mayor cantidad de validaciones con respecto el software ya instalado en el sistema al sistema donde se estará realizando la instalación de Luminus.\\
+	\item Que sea capaz de continuar con el proceso de instalación aun después de este haber sido interrumpido.\\
+	\item Que realice todas las validaciones de usuario necesarias para evitar el fallo del sistema por errores del usuario.\\
+	\item Un diseño mejor y más completo.\\
+\end{itemize}
+
