--- a/Base.tex
+++ b/Base.tex
@@ -26,7 +26,7 @@
 
 \author{Escuela Superior de Cómputo del IPN}
 
-\elaboro[]{Kevin Raul Monteón Valdez} 
+\elaboro[]{Kevin Raul Monteón Valdés} 
 \elaboro[]{Mayra Patricia Tovar Barba} 
 
 \title{\varProyecto}
