--- a/capitulo2/marcoteorico.tex
+++ b/capitulo2/marcoteorico.tex
@@ -840,8 +840,8 @@ Es un framework de software que soporta aplicaciones distribuidas bajo una licen
 \begin{UClist}
 	\UCli \textbf{MapReduce:} Es el módulo que permite ejecutar cómputo distribuido. Pretende la paralelización de procesos.\\
 	\UCli \textbf{HDFS (Hadoop Distributed File System:)} Es el sistema de archivos distribuido que utiliza Hadoop. Éste parte los datos en fragmentos y los almacena en los nodos que conforman el clúster donde Hadoop esté ejecutándose.\\
-	\UCli \textbf{YARN:} Es el gestor de recursos de Hadoop.
-	\UCli \textbf{Common Utilities:} Librerías y códifo necesario para ejecutar Hadoop.\\
+	\UCli \textbf{YARN:} Es el gestor de recursos de Hadoop.\\
+	\UCli \textbf{Common Utilities:} Librerías y código necesario para ejecutar Hadoop.\\
 \end{UClist}
 
 \newpage
