--- a/capitulo1/estadoarte.tex
+++ b/capitulo1/estadoarte.tex
@@ -1,13 +1,17 @@
 \hypertarget{seccion:IniciarSesion}{\vspace{1pt}}
 \section{Estado del arte}
-A continuación se muestra 
+Actualmente en el mercado existen diferentes alternativas para los usuarios que busquen hacer uso de Big Data. Las alternativas encontradas, podrían dividirse en 2 tipos:\\
+\begin{itemize}
+	\item Software que ya contiene algoritmos algoritmos de minería de datos implementados.\\
+	\item Software de administración de clústers. 
+\end{itemize}
 \begin{table}[]
 	\begin{tabular}{lll}
 		SOFTWARE       &   CARACTERÍSTICAS                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          & PRECIO EN EL MERCADO                                                                                                                                                                                        \\
 		Luminus          & \begin{tabular}[c]{@{}l@{}}-Trabaja con datos que se encuentra en distintos equipos\\ de cómputo (Red distribuida)\\ -Se puede seleccionar el algoritmo de minería de datos a\\ utilizar para su funcionamiento dentro de un listado de\\ algoritmos disponibles\\ -Es capaz de detectar cuando alguno de los nodos de datos\\ es modificado antes de resolver un determinado problema\\ -Los datos son extraídos directamente de los repositorios\\ en tiempo real\\ -Se trabaja con archivos JSON de los datos de entrada\\ -Ejecuta flujos de datos directamente hacia Spark\end{tabular} & Próximamente en el mercado                                                                                                                                                                                  \\
 		Knime            & \begin{tabular}[c]{@{}l@{}}-Diferentes maneras de presentar los datos como creación\\ de modelos estadísticos y de minería de datos, como\\ árboles de decisión, máquinas de vector soporte,\\ regresiones, etc.\\ -Aplicación de modelos creados con Knime sobre\\ conjuntos nuevos de datos.\\ -Creación de informes\\ -Posible incorporación de nuevos módulos en lenguaje R o\\ Python por el usuario final.\\ Tamaño de instalación: 1.98GB para la versión gratuita\end{tabular}                                                                                                       & \begin{tabular}[c]{@{}l@{}}Gratuita (Menos funcionalidad)/\\ De costo\\ Desde \$44,200 pesos al año por\\ un usuario\\ Hasta \$466,410 pesos al año\\ por 5 usuarios\end{tabular}                             \\
 		SPSS Modeler IBM & \begin{tabular}[c]{@{}l@{}}-Posible incorporación de nuevos módulos en lenguaje R\\ Python, Hadoop, Spark u otras tecnologías de código\\ abierto por el usuario final.\\ -Diferentes maneras de presentar los datos mediante la\\ creación de modelos.\\ -Acceso y Exportación de datos sin límite de tamaño.\\ -  Más de 30 algoritmos de minería de datos implementados\\ -Ejecuta flujos de datos directamente hacia Spark o\\ Hadoop\\ -Soporte técnico\\ Tamaño de instalación: 1.4GB para la versión de prueba\end{tabular}                                                           & \begin{tabular}[c]{@{}l@{}}Gratuita (Prueba 30 días)/De\\ costo\\ Es necesario contactar\\ directamente con IBM para\\ obtener el precio de la\\ herramienta personalizado para\\ cada empresa\end{tabular} \\
-		                                                                		Rapid Miner      & \begin{tabular}[c]{@{}l@{}}-Cuenta con gráficos para visualización de información\\ -Comparte reutiliza e implementa modelos predictivos\\ -Ejecuta flujos de datos directamente hacia Hadoop\\ -Presentación de datos desde diferentes representaciones\\ gráficas en tiempo real incluso la creación de árboles de\\ decisión\end{tabular}                                                                                                                                                                                                                                                 & \begin{tabular}[c]{@{}l@{}}Desde \$2500.00 pesos al año\\ hasta \$10000.00 pesos al año\end{tabular}                              
-	\end{tabular}
+		                                                                		Rapid Miner      & \begin{tabular}[c]{@{}l@{}}-Cuenta con gráficos para visualización de información\\ -Comparte reutiliza e implementa modelos predictivos\\ -Ejecuta flujos de datos directamente hacia Hadoop\\ -Presentación de datos desde diferentes representaciones\\ gráficas en tiempo real incluso la creación de árboles de\\ decisión\end{tabular}                                                                                                                                                                                                                                                 & \begin{tabular}[c]{@{}l@{}}Desde \$2500.00 pesos al año\\ hasta \$10000.00 pesos al año\end{tabular}  
+		                                                         
 \end{table}
 \newpage
