--- a/Base.tex
+++ b/Base.tex
@@ -6,6 +6,7 @@
 %\usepackage{sigra}
 %\usepackage{sinacem}
 \usepackage{cdt/cdtFormal}
+\usepackage[T1]{fontenc}
 %\usepackage{subfigure}
 \setcounter{secnumdepth}{2}
 \setcounter{tocdepth}{2}
@@ -34,79 +35,82 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
-
-%=========================================================
-% Portada
-%\ThisLRCornerWallPaper{1}{cdt/theme/agua.png}
-\thispagestyle{empty}
-\maketitle
-
-
-%=========================================================
-% Hoja de revisión
-%\makeDocInfo
-%\makeElemRefs
-%\makeDocRefs
-%\makeObservaciones[3cm]
-%\vspace{2cm}
-%\makeFirmas
-
-%=========================================================
-% Indices del documento
-\frontmatter
-%\newpage
-%
-%\LRCornerWallPaper{1}{cdt/theme/pleca.png}
-
-
-% \hideControlVersion
-
-\tableofcontents
-
-\mainmatter
-
-%----------------------------------------------------------
-%\chapter{Introducción}\label{cap:Introduccion}
-%\cfinput{introduccion}
-%
-%%----------------------------------------------------------
-%\chapter{Descripión del proceso}\label{cap:Introduccion}
-%\cfinput{proceso}
-%
-%%----------------------------------------------------------
-%\chapter{Glosario de Términos}\label{cap:Glosario}
-%\cfinput{glosario}
-%
-%
-%%---------------------------------------------------------
-%%----------------------------------------------------------
-%\chapter{Admisión}\label{cap:Admision}
-%%===================================================================
-\chapter{Capitulo 1}\label{cap:Cap1}
-\cfinput{capitulo1/introduccion} %si
-%\cfinput{capitulo1/planteamientoproblema} %no
-\cfinput{capitulo1/estadoarte} %si
-%\cfinput{capitulo1/propuestasolucion}
-\cfinput{capitulo1/justificacion} %si
-\cfinput{capitulo1/objetivos} %si
-\cfinput{capitulo1/arquitectura} %si
-%\cfinput{capitulo1/limitantes} %no
-%\cfinput{capitulo1/alcances} %no
-%
-\chapter{Capitulo 2}\label{cap:Cap2}
-\cfinput{capitulo2/marcoteorico}
-%bigdata arquitectura software (competidores de hadoop) mapreduce machine learning algoritmos supervisados (knn ejemplo, arboles de decision )y no supervisados (ejemplos, kammins) apuntes de mineria de datos
-%
-\chapter{Capitulo 3: Evaluación y definición de requerimientos de la red distribuida}\label{cap:Cap3}
-%\newpage
-\cfinput{capitulo3/prototipo1}%% Administrar pagos admisión
-%
-\chapter{Capitulo 4: Integración de requerimientos de la red distribuida}\label{cap:Cap4}
-%\newpage
-\cfinput{capitulo4/prototipo2}%% Administrar pagos admisión
-%
-\chapter{Capitulo 5}\label{cap:Cap5}
-
-\cfinput{capitulo5/instalador}%% Administrar pagos admisión
-
+	
+	%=========================================================
+	% Portada
+	%\ThisLRCornerWallPaper{1}{cdt/theme/agua.png}
+	\thispagestyle{empty}
+	\maketitle
+	
+	
+	%=========================================================
+	% Hoja de revisión
+	%\makeDocInfo
+	%\makeElemRefs
+	%\makeDocRefs
+	%\makeObservaciones[3cm]
+	%\vspace{2cm}
+	%\makeFirmas
+	
+	%=========================================================
+	% Indices del documento
+	\frontmatter
+	%\newpage
+	%
+	%\LRCornerWallPaper{1}{cdt/theme/pleca.png}
+	
+	
+	% \hideControlVersion
+	
+	\tableofcontents
+	
+	\mainmatter
+	
+	%----------------------------------------------------------
+	%\chapter{Introducción}\label{cap:Introduccion}
+	%\cfinput{introduccion}
+	%
+	%%----------------------------------------------------------
+	%\chapter{Descripión del proceso}\label{cap:Introduccion}
+	%\cfinput{proceso}
+	%
+	%%----------------------------------------------------------
+	%\chapter{Glosario de Términos}\label{cap:Glosario}
+	%\cfinput{glosario}
+	%
+	%
+	%%---------------------------------------------------------
+	%%----------------------------------------------------------
+	%\chapter{Admisión}\label{cap:Admision}
+	%%===================================================================
+	\chapter{Capitulo 1}\label{cap:Cap1}
+	\cfinput{capitulo1/introduccion} %si
+	%\cfinput{capitulo1/planteamientoproblema} %no
+	\cfinput{capitulo1/estadoarte} %si
+	%\cfinput{capitulo1/propuestasolucion}
+	\cfinput{capitulo1/justificacion} %si
+	\cfinput{capitulo1/objetivos} %si
+	\cfinput{capitulo1/arquitectura} %si
+	\cfinput{capitulo1/limitantes} %si
+	\cfinput{capitulo1/trabajoafuturo} %si 
+	%
+	\chapter{Marco teórico}\label{cap:Cap2}
+	\cfinput{capitulo2/marcoteorico}
+	
+	\chapter{Evaluación y definición de requerimientos de la red distribuida}\label{cap:Cap3}
+	%Realizar Pagos
+	%\newpage
+	\cfinput{capitulo3/prototipo1}%% Administrar pagos admisión
+	%
+	\chapter{Integración de requerimientos de la red distribuida}\label{cap:Cap4}
+	%Realizar Pagos
+	%\newpage
+	\cfinput{capitulo4/prototipo2}
+	%
+	\chapter{Instalador de Luminus}\label{cap:Cap5}
+	
+	\cfinput{capitulo5/instalador}
+	
+	\chapter{Anexos}
+	
 \end{document}
