--- a/capitulo1/estadoarte.tex
+++ b/capitulo1/estadoarte.tex
@@ -12,6 +12,6 @@ Actualmente en el mercado existen diferentes alternativas para los usuarios que 
 		Knime            & \begin{tabular}[c]{@{}l@{}}-Diferentes maneras de presentar los datos como creación\\ de modelos estadísticos y de minería de datos, como\\ árboles de decisión, máquinas de vector soporte,\\ regresiones, etc.\\ -Aplicación de modelos creados con Knime sobre\\ conjuntos nuevos de datos.\\ -Creación de informes\\ -Posible incorporación de nuevos módulos en lenguaje R o\\ Python por el usuario final.\\ Tamaño de instalación: 1.98GB para la versión gratuita\end{tabular}                                                                                                       & \begin{tabular}[c]{@{}l@{}}Gratuita (Menos funcionalidad)/\\ De costo\\ Desde \$44,200 pesos al año por\\ un usuario\\ Hasta \$466,410 pesos al año\\ por 5 usuarios\end{tabular}                             \\
 		SPSS Modeler IBM & \begin{tabular}[c]{@{}l@{}}-Posible incorporación de nuevos módulos en lenguaje R\\ Python, Hadoop, Spark u otras tecnologías de código\\ abierto por el usuario final.\\ -Diferentes maneras de presentar los datos mediante la\\ creación de modelos.\\ -Acceso y Exportación de datos sin límite de tamaño.\\ -  Más de 30 algoritmos de minería de datos implementados\\ -Ejecuta flujos de datos directamente hacia Spark o\\ Hadoop\\ -Soporte técnico\\ Tamaño de instalación: 1.4GB para la versión de prueba\end{tabular}                                                           & \begin{tabular}[c]{@{}l@{}}Gratuita (Prueba 30 días)/De\\ costo\\ Es necesario contactar\\ directamente con IBM para\\ obtener el precio de la\\ herramienta personalizado para\\ cada empresa\end{tabular} \\
 		                                                                		Rapid Miner      & \begin{tabular}[c]{@{}l@{}}-Cuenta con gráficos para visualización de información\\ -Comparte reutiliza e implementa modelos predictivos\\ -Ejecuta flujos de datos directamente hacia Hadoop\\ -Presentación de datos desde diferentes representaciones\\ gráficas en tiempo real incluso la creación de árboles de\\ decisión\end{tabular}                                                                                                                                                                                                                                                 & \begin{tabular}[c]{@{}l@{}}Desde \$2500.00 pesos al año\\ hasta \$10000.00 pesos al año\end{tabular}  
-		                                                         
+\end{tabular} 		                                                         
 \end{table}
 \newpage
