--- a/capitulo1/estadoarte.tex
+++ b/capitulo1/estadoarte.tex
@@ -3,15 +3,31 @@
 Actualmente en el mercado existen diferentes alternativas para los usuarios que busquen hacer uso de Big Data. Las alternativas encontradas, podrían dividirse en 2 tipos:\\
 \begin{itemize}
 	\item Software que ya contiene algoritmos algoritmos de minería de datos implementados.\\
-	\item Software de administración de clústers. 
-\end{itemize}
-\begin{table}[]
-	\begin{tabular}{lll}
-		SOFTWARE       &   CARACTERÍSTICAS                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          & PRECIO EN EL MERCADO                                                                                                                                                                                        \\
-		Luminus          & \begin{tabular}[c]{@{}l@{}}-Trabaja con datos que se encuentra en distintos equipos\\ de cómputo (Red distribuida)\\ -Se puede seleccionar el algoritmo de minería de datos a\\ utilizar para su funcionamiento dentro de un listado de\\ algoritmos disponibles\\ -Es capaz de detectar cuando alguno de los nodos de datos\\ es modificado antes de resolver un determinado problema\\ -Los datos son extraídos directamente de los repositorios\\ en tiempo real\\ -Se trabaja con archivos JSON de los datos de entrada\\ -Ejecuta flujos de datos directamente hacia Spark\end{tabular} & Próximamente en el mercado                                                                                                                                                                                  \\
-		Knime            & \begin{tabular}[c]{@{}l@{}}-Diferentes maneras de presentar los datos como creación\\ de modelos estadísticos y de minería de datos, como\\ árboles de decisión, máquinas de vector soporte,\\ regresiones, etc.\\ -Aplicación de modelos creados con Knime sobre\\ conjuntos nuevos de datos.\\ -Creación de informes\\ -Posible incorporación de nuevos módulos en lenguaje R o\\ Python por el usuario final.\\ Tamaño de instalación: 1.98GB para la versión gratuita\end{tabular}                                                                                                       & \begin{tabular}[c]{@{}l@{}}Gratuita (Menos funcionalidad)/\\ De costo\\ Desde \$44,200 pesos al año por\\ un usuario\\ Hasta \$466,410 pesos al año\\ por 5 usuarios\end{tabular}                             \\
+\begin{table}[H]
+	\begin{tabular}{l|l|l}
+		SOFTWARE & CARACTERÍSTICAS & PRECIO EN EL MERCADO\\
+					\hline                                              
+		Luminus          & \begin{tabular}[c]{@{}l@{}}-Trabaja con datos que se encuentra en distintos equipos\\ de cómputo (Red distribuida)\\ -Se puede seleccionar el algoritmo de minería de datos a\\ utilizar para su funcionamiento dentro de un listado de\\ algoritmos disponibles\\ -Es capaz de detectar cuando alguno de los nodos de datos\\ es modificado antes de resolver un determinado problema\\ -Los datos son extraídos directamente de los repositorios\\ en tiempo real\\ -Se trabaja con archivos JSON de los datos de entrada\\ -Ejecuta flujos de datos directamente hacia Spark\end{tabular} & Próximamente en el mercado                                                                                       \\
+		\hline
+		Knime            & \begin{tabular}[c]{@{}l@{}}-Diferentes maneras de presentar los datos como creación\\ de modelos estadísticos y de minería de datos, como\\ árboles de decisión, máquinas de vector soporte,\\ regresiones, etc.\\ -Aplicación de modelos creados con Knime sobre\\ conjuntos nuevos de datos.\\ -Creación de informes\\ -Posible incorporación de nuevos módulos en lenguaje R o\\ Python por el usuario final.\\ Tamaño de instalación: 1.98GB para la versión gratuita\end{tabular}                                                                                                       & \begin{tabular}[c]{@{}l@{}}Gratuita (Menos funcionalidad)/\\ De costo\\ Desde \$44,200 pesos al año por\\ un usuario\\ Hasta \$466,410 pesos al año\\ por 5 usuarios\end{tabular}     
+		                        \\
+		\hline		                       
 		SPSS Modeler IBM & \begin{tabular}[c]{@{}l@{}}-Posible incorporación de nuevos módulos en lenguaje R\\ Python, Hadoop, Spark u otras tecnologías de código\\ abierto por el usuario final.\\ -Diferentes maneras de presentar los datos mediante la\\ creación de modelos.\\ -Acceso y Exportación de datos sin límite de tamaño.\\ -  Más de 30 algoritmos de minería de datos implementados\\ -Ejecuta flujos de datos directamente hacia Spark o\\ Hadoop\\ -Soporte técnico\\ Tamaño de instalación: 1.4GB para la versión de prueba\end{tabular}                                                           & \begin{tabular}[c]{@{}l@{}}Gratuita (Prueba 30 días)/De\\ costo\\ Es necesario contactar\\ directamente con IBM para\\ obtener el precio de la\\ herramienta personalizado para\\ cada empresa\end{tabular} \\
-		                                                                		Rapid Miner      & \begin{tabular}[c]{@{}l@{}}-Cuenta con gráficos para visualización de información\\ -Comparte reutiliza e implementa modelos predictivos\\ -Ejecuta flujos de datos directamente hacia Hadoop\\ -Presentación de datos desde diferentes representaciones\\ gráficas en tiempo real incluso la creación de árboles de\\ decisión\end{tabular}                                                                                                                                                                                                                                                 & \begin{tabular}[c]{@{}l@{}}Desde \$2500.00 pesos al año\\ hasta \$10000.00 pesos al año\end{tabular}  
-		                                                         
+		\hline
+		Rapid Miner      & \begin{tabular}[c]{@{}l@{}}-Cuenta con gráficos para visualización de información\\ -Comparte reutiliza e implementa modelos predictivos\\ -Ejecuta flujos de datos directamente hacia Hadoop\\ -Presentación de datos desde diferentes representaciones\\ gráficas en tiempo real incluso la creación de árboles de\\ decisión\end{tabular}                                         & \begin{tabular}[c]{@{}l@{}}Desde \$2500.00 pesos al año\\ hasta \$10000.00 pesos al año\end{tabular}
+		\end{tabular}
 \end{table}
-\newpage
+\item Software de administración de clústers.\\
+	\begin{table}[H]
+		\begin{tabular}{l|L{9cm}|l}
+		SOFTWARE & CARACTERÍSTICAS & PRECIO EN EL MERCADO\\
+		\hline
+			Databricks & \begin{tabular}[c]{@{}l@{}}-Optimizado para lenguaje R.\\ -Muy simple de operar.\\ -Se enfoca en la usabilidad y en procesos intuitivos de\\ navegación.\\ \end{tabular} & \begin{tabular}[c]{@{}l@{}}-Basic - \$0.07 USD por hora de\\ uso de unidad de procesamiento.\\ -Analytics - \$0.2 USD por hora\\ de uso de unidad de procesamiento. \end{tabular}\\
+		\hline
+			Cloudera Manager & \begin{tabular}[c]{@{}l@{}}-Plataforma de administración de clústers.\\ -Tiene su propia implementación de búsqueda y ambiente\\ Hadoop con integración y API estándar (CDH).\\ -Cuenta con una interfaz gráfica vía web que opera el stack \\completo de tecnologías de Big Data.\\ \end{tabular}  & \begin{tabular}[c]{@{}l@{}}-Gratuita (Prueba de 60 días)\\ -Essentials \$0.06 USD por hora\\ de uso de unidad de procesamiento\\ -Enterprise Data Hub \$0.87 USD \\por hora de uso de unidad de\\ procesamiento\end{tabular} \\
+		\hline
+			HortonWorks& \begin{tabular}[c]{@{}l@{}}-Completamente open-source.\\ -Cuenta con un set completo de herramientas necesarias \\para un ambiente Hadoop.\\ -Se puede lanzar en la nube o en una máquina virtual.\\ -Gran extensibilidad debido a su naturaleza de código abierto.\\ -Utiliza Ambari como interfaz de usuario.\\ \end{tabular} & \begin{tabular}[c]{@{}l@{}} Gratuito\\ \end{tabular}
+
+		\end{tabular}
+	\end{table}
+\end{itemize}
