--- a/Base.tex
+++ b/Base.tex
@@ -9,8 +9,9 @@
 %\usepackage{subfigure}
 \setcounter{secnumdepth}{2}
 \setcounter{tocdepth}{2}
-
+\usepackage{array}
 \usepackage{float}
+\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
 
 
@@ -26,7 +27,7 @@
 
 \author{Escuela Superior de Cómputo del IPN}
 
-\elaboro[]{Kevin Raul Monteón Valdés} 
+\elaboro[]{Raúl Kevin Monteón Valdés} 
 \elaboro[]{Mayra Patricia Tovar Barba} 
 
 \title{\varProyecto}
