intento de commit

--- a/capitulo1/introduccion.tex
+++ b/capitulo1/introduccion.tex
@@ -1,7 +1,7 @@
 \hypertarget{seccion:IniciarSesion}{\vspace{1pt}}
 \section{Introduccion}
 En la actualidad, el valor de los datos es muy importante para las empresas; cuando se hace un análisis correcto de la información
-histórica almacenada, se pueden hacer estadísticas de comportamiento, inclusive predicciones futuras, las cuales ayudan a la toma
+histórica almacenada, se pueden hacer estadísticas de comportamiento e inclusive predicciones de eventos que vendrán en el futuro, las cuales ayudan a la toma
 de decisiones. Conforme los datos crecen en el tiempo, también la complejidad en el procesamiento de estos datos aumenta.
 Una de las tendencias de años recientes, llamada Big Data, utiliza un esquema de cómputo distribuido para aprovechar la
 infraestructura de cómputo disponible en la empresa, y resuelve de manera cooperativa los problemas de análisis de datos.
